# Cargo.toml
[package]
name = "rfbs"
version = "0.1.4"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
static = ["openssl-sys/vendored"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]